# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: testresult2.txt
